--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "naive-ui": "^2.38.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vfonts": "^0.1.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
