--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:docker": "docker build --progress=plain -t registry.cn-hangzhou.aliyuncs.com/ybfweb/webrtc:webrtc-client ."
   },
   "dependencies": {
+    "naive-ui": "^2.38.1",
     "socket.io-client": "^4.7.5",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "naive-ui": "^2.38.1"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
