--- a/packages/serve/package.json
+++ b/packages/serve/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -e ts --exec ts-node ./src/serve.ts",
     "start": "ts-node ./src/serve.ts",
-    "build:docker": "docker build --progress=plain -t registry.cn-hangzhou.aliyuncs.com/ybfweb/webrtc:webrtc-serve ."
+    "build:docker": "docker build --progress=plain -t registry.cn-hangzhou.aliyuncs.com/ybfweb/webrtc:webrtc-serve_1.0 . --platform=linux/amd64"
   },
   "author": "",
   "license": "ISC",
